# cand

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: main.c  types.h
